--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-07-29 11:42:55
+lastsearch = 2024-07-29 12:52:24
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoquZffPeUGFJgaMpylQzjXccg2dr9D8GidCiU0qiyGRN7cDUs5G
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
 match = -13.8%%
@@ -34,7 +34,7 @@ url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 [thegioidemonline.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoojJw7NuxB5lKwbjA2tn7CencHcUYtIp5AKSO6Cixj1_nuLdxgn
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [khodem.vn]
 match = 55.2%%
