--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-29 04:37:04
+lastsearch = 2024-07-29 12:57:06
 
 [shopee.vn]
-match = -90.9%%
-title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
-url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
+match = -77.3%%
+title = 3m -2m gấp gọn chống thấm nước hàng đẹp ngồi ăn cỗ
+url = https://shopee.vn/Chiếu-nhựa-dài-4m-3m-2m-gấp-gọn-chống-thấm-nước-hàng-đẹp-ngồi-ăn-cỗ-i.28032344.7417800514
 
 [www.facebook.com]
 match = 36.4%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/61553157173242/
 [www.lazada.vn]
 match = -86.4%%
 title = Chiếu Nhựa 2mx 3m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=5
+url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=5&srsltid=AfmBOorGCfq2x69qZwmCKMFFi79_Jk9l42o0NsGYoLJ4kpYiH_LVscrM
 
 [tiki.vn]
 match = -86.4%%
