--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-29 10:45:10
+lastsearch = 2024-07-29 12:52:05
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOorOiV5BTan_PJC70jiwnsxdOd2FXWDktYL8RZeths6QTkfgidQl
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
 match = -186.7%%
@@ -77,9 +77,9 @@ title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
 url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
-match = -240.0%%
-title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơi Bắc Hà
-url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
+match = -113.3%%
+title = Bộ vận động 12 chi tiết - Đồ chơi Bắc Hà
+url = https://dochoimamnon123.com/bo-van-dong-12-chi-tiet
 
 [m.facebook.com]
 match = -113.3%%
