--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-29 10:16:19
+lastsearch = 2024-07-29 12:50:41
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -392,9 +392,9 @@ title = Nghề dệt chiếu ở Cần Thơ
 url = https://www.cantho.gov.vn/wps/portal/home/du-khach/chi-tiet/diem-tham-quan/lang-nghe/nghe+det+chieu+o+can+tho
 
 [books.google.com]
-match = -218.8%%
-title = Northern Vietnam: Official Standard Names Approved by the ...
-url = https://books.google.com/books?id=9OJle8CiBVQC&pg=PA137&lpg=PA137&dq=chieu+lac+gam+18&source=bl&ots=ymQZno1or2&sig=ACfU3U3J76kITabxyb45nFIiIsqMVzxAqw&hl=en&sa=X&ved=2ahUKEwjZorKb8KaHAxX_jokEHXawCHYQ6AF6BAgbEAM
+match = -150.0%%
+title = Chiến sĩ Cộng Hòa - Page 25 - Google Books Result
+url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=RA18-PA25&lpg=RA18-PA25&dq=chieu+lac+gam+18&source=bl&ots=p30RSG5WMq&sig=ACfU3U2yASbazsM2bm2B6oR2jWib9yVugQ&hl=en&sa=X&ved=2ahUKEwjTl-WHx8uHAxW6rokEHdG_CqoQ6AF6BAgYEAM
 
 [g7tools.com]
 match = -175.0%%
