--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-29 11:50:40
+lastsearch = 2024-07-29 12:54:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Vietstock Weekly 29/07-02/08/2024: Triển vọng ngắn hạn ...
-url = https://vietstock.vn/2024/07/vietstock-weekly-2907-02082024-trien-vong-ngan-han-chua-the-lac-quan-1636-1212510.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 29/07: Tâm lý lạc quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2907-tam-ly-lac-quan-dan-quay-tro-lai-585-1212641.htm
 
 [baohungyen.vn]
 match = -200.0%%
