--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 05:42:57
+lastsearch = 2024-07-29 12:57:26
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -132,9 +132,9 @@ title = 'Tiểu Maldini' sắp gia nhập Arsenal là ai?
 url = https://vtcnews.vn/tieu-maldini-sap-gia-nhap-arsenal-la-ai-ar884525.html
 
 [vietstock.vn]
-match = -225.0%%
-title = Phân tích kỹ thuật phiên chiều 23/07: Tâm lý thận trọng bao ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2307-tam-ly-than-trong-bao-trum-thi-truong-585-1210439.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 29/07: Tâm lý lạc quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2907-tam-ly-lac-quan-dan-quay-tro-lai-585-1212641.htm
 
 [www.dcine.vn]
 match = 20.0%%
