--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-29 10:51:41
+lastsearch = 2024-07-29 12:57:47
 
 [chieutrelanlan.com]
-match = -41.7%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+match = -16.7%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
 
 [kyoryo.vn]
 match = -54.2%%
@@ -52,14 +52,14 @@ title = FULL TRẬN | Carlo Biado vs Wiktor Zielinski | Last 16 | GIẢI ...
 url = https://www.youtube.com/watch?v=KTfTvlPEy1o
 
 [www.facebook.com]
-match = 8.3%%
-title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
-url = https://www.facebook.com/chieutructot/?locale=vi_VN
+match = 5.3%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [chieutrucsaigon.com]
-match = 8.3%%
-title = CHIẾU TRÚC VIỆT NAM CHẤT LƯỢNG RA SAO?
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-viet-nam-chat-luong-ra-sao-128.html
+match = 12.5%%
+title = NHÀ BÁN LẼ CHIẾU TRÚC HÀNG ĐẦU TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/nha-ban-le-chieu-truc-hang-dau-tphcm-83.html
 
 [www.xskthcm.com]
 match = -83.3%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = -45.8%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorZUcqfGqbezv5_qO_IGaGF1CkSn8XZx-LN04eFp1jHHtIZ7OTx
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -274,7 +274,7 @@ url = https://roman.vn/huong-dan-cach-chon-aptomat-cho-ho-gia-dinh-chinh-xac-nha
 [www.lazada.vn]
 match = -62.5%%
 title = chiếu tre 1,6*2m Trúc Linh hàng Việt Nam cao cấp siêu rẻ
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOorPUPEXRR32s3wEpGEYFMEeoMiS6LejcaYzP7wfh26wvT6jCYXD
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html
 
 [www.sbv.gov.vn]
 match = -111.1%%
