--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-29 11:47:51
+lastsearch = 2024-07-29 12:58:50
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,14 +22,14 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = -3.6%%
-title = Chiếu Trúc QUẾ LÂM Hạt Vàng Cao cấp đủ kích thước ...
-url = https://shopee.vn/Chiếu-Trúc-QUẾ-LÂM-Hạt-Vàng-Cao-cấp-đủ-kích-thước-Chiếu-Trúc-Miếng-Siêu-Bền-i.264312794.4455092764
+match = 42.9%%
+title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
 
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooiSWYyen6K5cFAlE7Gz1g4miCIPeQGEYTghZY4LB2e7ULEnTv9
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorc3yDSlvQS4sFkwrH8Wv81q_j8gZvirnZLTNola2AnZFemucba
 
 [tiki.vn]
 match = -39.3%%
@@ -82,9 +82,9 @@ title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
 url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
 
 [www.sendo.vn]
-match = -17.9%%
-title = Chiếu Trúc Hạt Quế Lâm kích thước 1m8x2m [Được kiểm ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-1m8x2m-duo-c-kie-m-ha-ng-18050982-117148935.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721088000325_undefined_-1_cateLvl2_0_56_23_-1
+match = -21.4%%
+title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117250267.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721952000324_undefined_-1_cateLvl2_0_89_23_-1
 
 [caobanggreen.vn]
 match = 0.0%%
