--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-29 10:19:14
+lastsearch = 2024-07-29 12:50:18
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxWz6_D_&sig=ACfU3U1o3a5PjyxKQ7i-ESZh9FbZvvvVjQ&hl=en&sa=X&ved=2ahUKEwi8tP6apcuHAxViEFkFHfBMAfIQ6AF6BAgWEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxWA5-z1&sig=ACfU3U01UlErWNsFE7ufm-VFKCADNAtdcA&hl=en&sa=X&ved=2ahUKEwj3tNr8xsuHAxUtk4kEHZ1JAuYQ6AF6BAgXEAM
 
 [ottawabraves.com]
 match = -292.3%%
@@ -382,9 +382,9 @@ title = BULLY TOOLS 82525 Point Shovel,Square,14 ga.,Fiberglass
 url = https://www.pinterest.com/pin/ni-fi--769904498777677920/
 
 [www.prowireusa.com]
-match = -138.5%%
-title = 0460-204-12141 Size 12 Contact 14-12 Ga
-url = https://www.prowireusa.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
+match = -192.3%%
+title = Deutsch 0462-203-2031 Size 12 Contact 14-12 Ga
+url = https://www.prowireusa.com/p-88-deutsch-0462-210-1231-contact-14-12-ga.html
 
 [www.dailymotion.com]
 match = -300.0%%
