--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-29 13:51:58
+lastsearch = 2024-07-29 15:16:56
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
+match = -17.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = -30.4%%
+title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
+url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/?locale=vi_VN
 
 [www.sendo.vn]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOopWQbOzsE7O0tg0x5Xa6faHr0x04DtYxJpOKmX-y4_tHRVokD70
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
 match = -73.9%%
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOoorXQFQ6B345scrUDffsAvlMSCICoD3TFU-bYv0ySj9lMqGUr7D
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 
 [h5.lazada.vn]
 match = 34.8%%
