--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-29 11:31:55
+lastsearch = 2024-07-29 16:28:45
 
 [www.facebook.com]
-match = -182.4%%
-title = Mothership - The Mao Shan Wang durians are priced at S ...
-url = https://www.facebook.com/MothershipSG/posts/the-mao-shan-wang-durians-are-priced-at-s8-per-kg/892901902878579/
+match = -141.2%%
+title = Mom asked "have anyone heard of Mo Dan? My fren ...
+url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-of-mo-dan-my-fren-has-been-fever-on-and-off-for-almo/10150974043136876/
 
 [www.teadrunk.com]
 match = -100.0%%
@@ -143,8 +143,8 @@ url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
 match = -194.1%%
-title = Formononetin: A Review of Its Anticancer Potentials and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6676344/
+title = Nine traditional Chinese herbal formulas for the treatment ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
 
 [books.google.com]
 match = -7.7%%
