--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-29 14:47:47
+lastsearch = 2024-07-29 16:18:46
 
 [shopee.vn]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = 10+ mẫu chiếu điều hoà hot nhất năm
 url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [sieuthidem.vn]
-match = 50.0%%
-title = Chiếu điều hoà Tencel - Hà Nội
-url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
+match = 16.7%%
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [lybalansieucute.com]
 match = 29.2%%
