--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-29 10:41:25
+lastsearch = 2024-07-29 16:22:56
 
 [www.gov.uk]
 match = -200.0%%
@@ -1080,4 +1080,9 @@ url = https://www.actionnewsjax.com/homepage
 match = 0.0%%
 title = 
 url = https://www.deepl.com/
+
+[www.chevron.com]
+match = -146.7%%
+title = Chevron Corporation - Human Energy — Chevron
+url = https://www.chevron.com/
 
