--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-29 13:39:34
+lastsearch = 2024-07-29 16:23:15
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -690,4 +690,9 @@ url = https://edocs.rentonwa.gov/Documents/DocView.aspx?id=1134528&dbid=0&repo=C
 match = -122.7%%
 title = Guantanamo Daily Gazette - UFDC Home - University of Florida
 url = https://original-ufdc.uflib.ufl.edu/AA00038543/00237
+
+[safetrec.berkeley.edu]
+match = -86.4%%
+title = Pedestrian Safety Improvement Program - SafeTREC
+url = https://safetrec.berkeley.edu/sites/default/files/publications/ped_safety_improvement_escholarship_uc_item_2c85n5xt.pdf
 
