--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-29 15:49:56
+lastsearch = 2024-07-29 16:14:01
 
 [noithathomy.com]
 match = -42.9%%
@@ -12,14 +12,14 @@ title = Thảm nỉ Bali 2m x 3m TNHM02 | Hàng nhâp khẩu
 url = https://noithathomy.com/san-pham/tham-ni-bali-2m-x-3m-tnhm02/
 
 [shopee.vn]
-match = -81.0%%
-title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
-url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
+match = -100.0%%
+title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
+url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
 
 [www.lazada.vn]
-match = -42.9%%
-title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
+match = 23.8%%
+title = Thảm bali 2m x 3m cao cấp
+url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
 
 [tiki.vn]
 match = -9.5%%
