--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-29 13:23:07
+lastsearch = 2024-07-29 16:23:36
 
 [www.lazada.vn]
 match = -212.5%%
@@ -62,14 +62,14 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -81.2%%
-title = בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/album/-
+match = -225.0%%
+title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/track/ave-maria
 
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOop_StBaW8KYI8nvtX1thMIojGGuvwBfjNP4NVX9AaxMSuX1c1nM
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
